--- a/templates/flack.html
+++ b/templates/flack.html
@@ -39,12 +39,12 @@
             </div>
         </div>
         <!-- These buttons are here for the time being only and will be deleted in the final code  -->
-        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"
+        <!-- <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"
             data-whatever="@mdo">Open modal for @mdo</button>
         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"
             data-whatever="@fat">Open modal for @fat</button>
         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"
-            data-whatever="@getbootstrap">Open modal for @getbootstrap</button>
+            data-whatever="@getbootstrap">Open modal for @getbootstrap</button> -->
         <div style="width: 50%;">
             <!-- Channel creation form -->
 
@@ -177,8 +177,8 @@
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
-                <div class="modal-body">
-                    <form>
+                <!-- <div class="modal-body">
+                      <form>
                         <div class="form-group">
                             <label for="recipient-name" class="col-form-label">Recipient:</label>
                             <input type="text" class="form-control" id="recipient-name">
@@ -187,11 +187,11 @@
                             <label for="message-text" class="col-form-label">Message:</label>
                             <textarea class="form-control" id="message-text"></textarea>
                         </div>
-                    </form>
-                </div>
+                    </form> 
+                </div> -->
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary" id="sendPrivateMessage">Send message</button>
+                    <button type="button" class="btn btn-primary" id="sendPrivateMessage">Yes</button>
                 </div>
             </div>
         </div>
